--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0"
+    "joi": "^17.9.2",
+    "mongodb": "^5.6.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
